--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "express": "^4.16.3",
     "http": "0.0.0",
     "https": "^1.0.0",
-    "mssql": "^4.1.0"
+    "mssql": "^4.2.1"
+  },
+  "devDependencies": {
+    "mocha": "^5.2.0"
   }
 }
